src/App.css
/* ... */
.popup-sell-rate-money-icon {
  display: inline-block;
  background-image: url(./assets/img/static/cash.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  margin-bottom: -9px;
  width: 40px;
  height: 35px;
  transform: translateY(3.5px);
}

.popup-sell-figure {
  background-image: url(./assets/img/sell-figure.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  margin: 0px auto;
  width: 225px;
  height: 225px;
}

.popup-sell-description {
  color: #fff;
  text-shadow: 0em 0.1em #000, 0.038em 0.092em #000, 0.071em 0.071em #000, 0.092em 0.038em #000, 0.1em 0em #000, 0.092em -0.038em #000, 0.071em -0.071em #000, 0.038em -0.092em #000, 0em -0.1em #000, -0.038em -0.092em #000, -0.071em -0.071em #000, -0.092em -0.038em #000, -0.1em 0em #000, -0.092em 0.038em #000, -0.071em 0.071em #000, -0.038em 0.092em #000;
  text-align: center;
  width: 300px;
  font-size: 17px;
  font-weight: bold;
  margin: -5px auto 0;
}

.popup-sell-description span {
  font-size: 18px;
  display: inline-block;
  margin-left: 2px;
  color: #fdf611;
  font-family: LilitaOne, sans-serif !important;
}

.popup-sell-money-icon {
  display: inline-block;
  background-image: url(./assets/img/static/cash.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 35px;
  height: 35px;
  margin: 0 3px -12px 1px;
}

.popup-sell-btn-destroy,
.popup-sell-btn-swap {
  text-align: center;
  background-color: transparent;
  border: none;
  background-image: url(./assets/img/static/green-button.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  margin: 0 auto;
  width: 102px;
  height: 55px;
  color: #fff;
  font-size: 18px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-shadow: 0em 0.1em #000, 0.038em 0.092em #000, 0.071em 0.071em #000, 0.092em 0.038em #000, 0.1em 0em #000, 0.092em -0.038em #000, 0.071em -0.071em #000, 0.038em -0.092em #000, 0em -0.1em #000, -0.038em -0.092em #000, -0.071em -0.071em #000, -0.092em -0.038em #000, -0.1em 0em #000, -0.092em 0.038em #000, -0.071em 0.071em #000, -0.038em 0.092em #000;
  cursor: pointer;
  transition: transform 75ms linear;
  font-family: LilitaOne, sans-serif;
}

.popup-sell-btn-destroy {
  background-image: url(./assets/img/static/red-button.png);
  margin-top: 5px;
}

div.farm-cash {
  background-image: url(./assets/img/static/cash.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  width: 21px;
  height: auto;
  margin-right: 10px;
}


div.farm-coin {
  background-image: url(./assets/img/static/coin.png);
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
  width: 21px;
  height: auto;
  margin-bottom: 2px;
  margin-right: 5px;
}

.alert-warning {
  margin-bottom: 10px;
}

.menu-fixed-left {
  position: fixed;
  left: 15px;
  top: 30px;
  color: #fff;
  width: 250px;
  z-index: 4;
  display: block;
}

.menu-btns {
  display: flex;
  justify-content: center;
  flex-direction: column;
  margin-left: 15px;
  width: 70px;
}

.menu-btn {
  width: 78px;
  height: 54px;
  background-color: transparent;
  background-size: contain;
  background-repeat: no-repeat;
  transition: transform 75ms linear;
  cursor: pointer;
  border: 0;
  color: #fff;
}

.telegram {
  background-image: url(./assets/img/static/telegram.png);
}

.faq {
  background-image: url(./assets/img/static/faq.png);
}

.referral {
  background-image: url(./assets/img/static/referral.png);
}

.menu-bar {
  position: relative;
  width: 250px;
  height: 35px;
  margin: 0 auto 10px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.menu-bar-coin {
  background-image: url(./assets/img/static/coins-bar.png);
}

.menu-bar-money {
  background-image: url(./assets/img/static/cash-bar.png);
}

.menu-bar-wallet {
  background-image: url(./assets/img/static/wallet-bar.png);
}

.menu-bar-value {
  color: #000;
  top: 4px;
  font-size: 19px;
  position: absolute;
  left: 50%;
  transform: translate(-50%);
  font-weight: bold;
}

.menu-bar-value-wallet {
  left: 55%;
}

.menu-bar-without-background {
  position: relative;
  display: flex;
  justify-content: center;
  margin-top: -10px;
  background-image: none;
}

.menu-bar-btn {
  background: transparent;
  border: 0;
  position: absolute;
  width: 27px;
  height: 32px;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  right: 18px;
  top: 1px;
  transition: transform 75ms linear;
  transition: linear;
  cursor: pointer;
}

.plus {
  background-image: url(./assets/img/static/plus.png);
}

.minus {
  background-image: url(./assets/img/static/minus.png);
}

.fa {
  font-size: x-large;
  font-weight: bolder;
  width: 100%;
  height: 100%;
  text-align: center;
  vertical-align: middle;
  text-decoration: none;
  color: #fff;
}

.menu-bar-per-hour {
  text-shadow: #000 -1px -1px 0, #000 0 -1.5px 0, #000 1px -1px 0, #000 1.5px 0 0, #000 1px 1px 0, #000 0 2px 0, #000 -1px 1px 0, #000 -1.5px 0 0;
  font-size: 16px;
  position: relative;
  left: 50%;
  top: 40px;
  transform: translate(-50%);
}

.menu-bar-per-hour div {
  display: inline-block;
}

.popup-text {
  color: #fff;
  text-shadow: 0em 0.1em #000, 0.038em 0.092em #000, 0.071em 0.071em #000, 0.092em 0.038em #000, 0.1em 0em #000, 0.092em -0.038em #000, 0.071em -0.071em #000, 0.038em -0.092em #000, 0em -0.1em #000, -0.038em -0.092em #000, -0.071em -0.071em #000, -0.092em -0.038em #000, -0.1em 0em #000, -0.092em 0.038em #000, -0.071em 0.071em #000, -0.038em 0.092em #000;
}

.popup-upgrade-mini-box {
  width: 300px;
  background-image: url(./assets/img/mini-box.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 42px;
  margin: 20px auto 0;
  position: relative;
}
/* ... */

